tests/baselines/reference/emitArrowFunctionWhenUsingArguments07.errors.txt
emitArrowFunctionWhenUsingArguments07.ts(2,34): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments07.ts (1 errors) ====
    function f(arguments) {
        var a = (arguments) => () => arguments;
                                     ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }